--- a/index.html
+++ b/index.html
@@ -321,6 +321,20 @@
               </div>
             </div>
           </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-js">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
+                <a href="javascript3.html" title="More Details"><i class="bi bi-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>JS 3</h4>
+                <p>JavaScript</p>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-css">
             <div class="portfolio-wrap">
