--- a/index.html
+++ b/index.html
@@ -757,11 +757,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">HTML5 Tutorials</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">CSS3 Tutorials</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">JavaScript Tutorials</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Python Tutorials</a></li>
             </ul>
           </div>
 
