--- a/html1.html
+++ b/html1.html
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Twiff.</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Twiff.Edu</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -105,7 +105,7 @@
               <h3>Tutorial Information</h3>
               <ul>
                 <li><strong>Category</strong>: HTML5</li>
-                <li><strong>Title</strong>: HTML Dasar - Code Editor</li>
+                <li><strong>Title</strong>: Code Editor</li>
                 <li><strong>Provided by</strong>: Web Programming UNPAS</li>
                 <li><strong>Modul URL</strong>: <a href="https://bit.ly/326mUQs">Click for PDF file</a></li>
               </ul>
@@ -132,7 +132,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Twiff Edu.</h3>
+            <h3>Twiff.Edu</h3>
             <p>
               Jl. Ki Ageng Pemanahant <br>
               Bantul, Special Region of Yogyakarta, YK 55162<br>
@@ -181,7 +181,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Twiff Edu.</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Twiff.Edu</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
