--- a/css3.html
+++ b/css3.html
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Twiff.</span></a></h1>
+        <h1 class="text-light"><a href="index.html"><span>Twiff.Edu</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -132,7 +132,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Twiff Edu.</h3>
+            <h3>Twiff.Edu</h3>
             <p>
               Jl. Ki Ageng Pemanahant <br>
               Bantul, Special Region of Yogyakarta, YK 55162<br>
@@ -181,7 +181,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Twiff Edu.</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Twiff.Edu</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer>
