--- a/python3.html
+++ b/python3.html
@@ -95,9 +95,8 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <iframe src="https://drive.google.com/file/d/1frd57jmqNvYkw5ePxPotlm29rrY7V3oU/preview" 
-            width="800" height="600" allow="autoplay"></iframe>
+          <div class="col-lg-8 video-container">
+            <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1frd57jmqNvYkw5ePxPotlm29rrY7V3oU/preview" allow="autoplay"></iframe>
           </div>
 
           <div class="col-lg-4">
