--- a/html4.html
+++ b/html4.html
@@ -95,9 +95,9 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <iframe src="https://drive.google.com/file/d/1N8RqYhT8l-zJyq94pI8Wy0WBU-HgGPH-/preview" 
-            width="800" height="600" allow="autoplay"></iframe>
+          <div class="col-lg-8 video-container">
+            <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1N8RqYhT8l-zJyq94pI8Wy0WBU-HgGPH-/preview" allow="autoplay">
+            </iframe>
           </div>
 
           <div class="col-lg-4">
