--- a/javascript4.html
+++ b/javascript4.html
@@ -95,9 +95,9 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <iframe src="https://drive.google.com/file/d/15uKlMLWBg5zHxXjs4pm7lq3ue6dBIBsy/preview" 
-            width="800" height="600" allow="autoplay"></iframe>
+          <div class="col-lg-8 video-container">
+            <iframe class="responsive-iframe" src="https://drive.google.com/file/d/15uKlMLWBg5zHxXjs4pm7lq3ue6dBIBsy/preview" allow="autoplay">
+            </iframe>
           </div>
 
           <div class="col-lg-4">
