--- a/python2.html
+++ b/python2.html
@@ -95,9 +95,9 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <iframe src="https://drive.google.com/file/d/1agsJNZ-J081wWMcc7Op8gKc7DODv_2s_/preview" 
-            width="800" height="600" allow="autoplay"></iframe>
+          <div class="col-lg-8 video-container">
+            <iframe class="responsive-iframe" src="https://drive.google.com/file/d/1agsJNZ-J081wWMcc7Op8gKc7DODv_2s_/preview" allow="autoplay">
+            </iframe>
           </div>
 
           <div class="col-lg-4">
