a bit language configuration

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <div class="container">
       <div class="row gy-4">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Bettter understanding programming with Twiff.Edu</h1>
-          <h2>We are team of four students who willingly help you understand programming</h2>
+          <h1>Belajar Programming Bersama Twiff.Edu</h1>
+          <h2>Kami adalah tim yang terdiri atas empat orang mahasiswa akan membantu kalian mengenal lebih jauh terkait pemrograman.</h2>
           <div>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -108,20 +108,17 @@
           <div class="col-lg-6 pt-5 pt-lg-0">
             <h3 data-aos="fade-up">Twiff.Edu</h3>
             <p data-aos="fade-up" data-aos-delay="100" style="text-align: justify;">
-              Website kami bernama twiff.edu, website ini merupakan website media pembelajaran programming yang berisi berbagai macam tutorial programming 
-              seperti HTML,CSS,Javascript, dan Phyton. Terdapat tutorial dalam bentuk video dan ada juga yang berbentuk teks. 
+              Website kami bernama Twiff.edu, website ini merupakan website media pembelajaran programming yang berisi berbagai 
+              macam tutorial codingan seperti HTML,CSS,Javascript, dan Phyton. 
+              Terdapat tutorial dalam bentuk video dan ada juga yang berbentuk teks. 
             </p>
             <div class="row">
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                 <i class='bx bx-receipt' style='color:#124559'  ></i>
                 <h4>Background</h4>
-                <p style="text-align: justify;">Di era digital dan perkembangan teknologi yang pesat seperti sekarang ini profesi programmer atau developer perangkat lunak 
-                  banyak menarik minat orang. Saat ini sudah banyak orang yang mempelajari coding, 
-                  walaupun bukan dari background yang memiliki pendidikan komputer atau informatika. 
-                  Namun, terkadang saat mempelajari suatu codingan orang-orang terkendala karena Minimnya website pembelajaran Programming 
-                  yang menggunakan Bahasa Indonesia. Selain itu juga banyak orang-orang yang terkendala dengan kurangnya informasi yang 
-                  didapatkan terkait media pembelajaran programming. Ada juga website yang menyediakan pembelajaran programming namun 
-                  menggunakan bahasa yang sukar untuk dipahami. </p>
+                <p style="text-align: justify;">Saat mempelajari suatu bahasa pemrograman orang-orang terkendala dengan Minimnya website pembelajaran Programming yang menggunakan Bahasa Indonesia. 
+                  Selain itu juga  orang-orang terkendala dengan kurangnya informasi yang didapatkan terkait media pembelajaran programming. 
+                  Ada juga website yang menyediakan pembelajaran programming namun menggunakan bahasa yang sukar untuk dipahami.  </p>
               </div>
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <i class='bx bx-cube-alt' style='color:#124559' ></i>
@@ -142,7 +139,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Here is the tutorial we serve</p>
+          <p>Tutorial yang kami sediakan</p>
         </div>
 
         <div class="row">
@@ -151,8 +148,7 @@
               <div class="icon"><i class='bx bxl-html5' style='color:#124559'  ></i></box-icon></div>
               <h4 class="title"><a href="">HTML5</a></h4>
               <p class="description">Hypertext Markup Language atau HTML adalah bahasa markup yang digunakan untuk membuat struktur halaman website.  
-                HTML terdiri dari kombinasi teks dan simbol yang disimpan dalam sebuah file.
-                Untuk bisa diakses secara umum, pengguna perlu membukanya lewat aplikasi browser, seperti Internet Explorer, Chrome, atau Mozilla Firefox. </p>
+                HTML terdiri dari kombinasi teks dan simbol yang disimpan dalam sebuah file.  </p>
             </div>
           </div>
 
@@ -170,7 +166,7 @@
               <div class="icon"><i class='bx bxl-javascript' style='color:#124559' ></i></div>
               <h4 class="title"><a href="">JavaScript</a></h4>
               <p class="description">JavaScript adalah bahasa pemrograman populer yang digunakan untuk membuat situs dengan konten website yang dinamis. 
-                Konten dinamis artinya konten dapat bergerak atau berubah di depan layar tanpa perlu mereload halaman. </p>
+                Konten dinamis artinya konten dapat bergerak atau berubah di depan layar tanpa perlu mereload halaman.  </p>
             </div>
           </div>
 
@@ -178,8 +174,9 @@
             <div class="icon-box">
               <div class="icon"><i class='bx bxl-python' style='color:#124559' ></i></div>
               <h4 class="title"><a href="">Python</a></h4>
-              <p class="description">Python adalah salah satu bahasa pemrograman yang dapat melakukan eksekusi sejumlah instruksi multi guna secara langsung (interpretatif) 
-                dengan metode orientasi objek (Object Oriented Programming) serta menggunakan semantik dinamis untuk memberikan tingkat keterbacaan syntax.</p>
+              <p class="description">Python adalah salah satu bahasa pemrograman yang dapat melakukan eksekusi sejumlah instruksi 
+                multi guna secara langsung (interpretatif) dengan metode orientasi objek serta menggunakan 
+                semantik dinamis untuk memberikan tingkat keterbacaan syntax.</p>
             </div>
           </div>
 
@@ -194,7 +191,7 @@
 
         <div class="section-title">
           <h2>Tutorial</h2>
-          <p>Check out the tutorial we choose for you</p>
+          <p>Pilih tutorial yang anda inginkan</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -508,55 +505,28 @@
         <ul class="faq-list" data-aos="fade-up" data-aos-delay="100">
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Tutorial apa saja yang disediakan didalam website ini ? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Feugiat pretium nibh ipsum  consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                Kami menyediakan 4 tutorial bahasa pemrograman, yaitu HTML,CSS,Phyton dan Javascript
               </p>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Apa saja jenis tutorial yang disediakan? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                Tutorial video tentang bahasa pemrograman, dan juga tutorial dalam bentuk teks 
               </p>
             </div>
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Tutorial teksnya apakah bisa didownload ? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-              </p>
-            </div>
-          </li>
-
-          <li>
-            <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                Bisa, caranya sangat mudah. Tinggal menekan pdf yang ada pada bagian tutorial, maka akan diarahkan untuk mendownload
               </p>
             </div>
           </li>
@@ -572,7 +542,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Team</h2>
-          <p>Our team is always here to help</p>
+          <p>Anggota tim kami yang akan selalu membantu anda</p>
         </div>
 
         <div class="row">
@@ -669,7 +639,7 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
+                <h4>Lokasi:</h4>
                 <p>Jl. Ki Ageng Pemanahan, Bantul, Special Region of Yogyakarta, YK 55162</p>
               </div>
 
@@ -681,7 +651,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
+                <h4>Nomor Telepon:</h4>
                 <p>+62 8589 5548 5455</p>
               </div>
 
@@ -694,20 +664,20 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
+                  <label for="name">Nama Anda</label>
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="form-group col-md-6 mt-3 mt-md-0">
-                  <label for="name">Your Email</label>
+                  <label for="name">Email Anda</label>
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Subject</label>
+                <label for="name">Subjek</label>
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Message</label>
+                <label for="name">Pesan</label>
                 <textarea class="form-control" name="message" rows="10" required></textarea>
               </div>
               <div class="my-3">
@@ -715,7 +685,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">Kirimkan Pesan</button></div>
             </form>
           </div>
 
@@ -739,13 +709,13 @@
               Jl. Ki Ageng Pemanahan <br>
               Bantul, Special Region of Yogyakarta, YK 55162<br>
               Indonesia <br><br>
-              <strong>Phone:</strong> +62 8589 5548 5455<br>
+              <strong>Nomor Telepon:</strong> +62 8589 5548 5455<br>
               <strong>Email:</strong> twiff.edu@example.com<br>
             </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Link</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
@@ -756,7 +726,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Layanan Kami</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">HTML5 Tutorials</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">CSS3 Tutorials</a></li>
@@ -766,8 +736,8 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Follow us for more updated info</p>
+            <h4>Social Network</h4>
+            <p>Ikuti kami untuk informasi lebih update</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
