--- a/html4.html
+++ b/html4.html
@@ -125,67 +125,68 @@
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" style=" background-color:#eff6e0 ;"> 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
+ <!-- ======= Footer ======= -->
+ <footer id="footer" style="background-color: #eff6e0;">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Twiff.Edu</h3>
-            <p>
-              Jl. Ki Ageng Pemanahant <br>
-              Bantul, Special Region of Yogyakarta, YK 55162<br>
-              Indonesia <br><br>
-              <strong>Phone:</strong> +62 8589 5548 5455<br>
-              <strong>Email:</strong> twiff.edu@example.com<br>
-            </p>
-          </div>
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">HTML5 Tutorials</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">CSS3 Tutorials</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">JavaScript Tutorials</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Python Tutorials</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Follow us for more updated info</p>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div>
-
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h3>Twiff.Edu</h3>
+          <p>
+            Jl. Ki Ageng Pemanahan <br>
+            Bantul, Special Region of Yogyakarta, YK 55162<br>
+            Indonesia <br><br>
+            <strong>Nomor Telepon:</strong> +62 8589 5548 5455<br>
+            <strong>Email:</strong> twiff.edu@example.com<br>
+          </p>
         </div>
-      </div>
-    </div>
 
-    <div class="container py-4">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Twiff.Edu</span></strong>. All Rights Reserved
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Link</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Layanan Kami</h4>
+          <ul>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">HTML5 Tutorials</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">CSS3 Tutorials</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">JavaScript Tutorials</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#">Python Tutorials</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Social Network</h4>
+          <p>Ikuti kami untuk informasi lebih update</p>
+          <div class="social-links mt-3">
+            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          </div>
+        </div>
+
       </div>
     </div>
-  </footer>
-  <!-- End Footer -->
+  </div>
+
+  <div class="container py-4">
+    <div class="copyright">
+      &copy; Copyright <strong><span>Twiff.Edu</span></strong>. All Rights Reserved
+    </div>
+  </div>
+</footer>
+<!-- End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
