--- a/python3.html
+++ b/python3.html
@@ -125,7 +125,8 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer" style=" background-color:#eff6e0 ;"> 
+  <footer id="footer" style="background-color: #eff6e0;">
+
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -133,16 +134,16 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Twiff.Edu</h3>
             <p>
-              Jl. Ki Ageng Pemanahant <br>
+              Jl. Ki Ageng Pemanahan <br>
               Bantul, Special Region of Yogyakarta, YK 55162<br>
               Indonesia <br><br>
-              <strong>Phone:</strong> +62 8589 5548 5455<br>
+              <strong>Nomor Telepon:</strong> +62 8589 5548 5455<br>
               <strong>Email:</strong> twiff.edu@example.com<br>
             </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Link</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
@@ -153,7 +154,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Layanan Kami</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">HTML5 Tutorials</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">CSS3 Tutorials</a></li>
@@ -163,8 +164,8 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Follow us for more updated info</p>
+            <h4>Social Network</h4>
+            <p>Ikuti kami untuk informasi lebih update</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
