added some video description

--- a/html1.html
+++ b/html1.html
@@ -111,9 +111,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Deskripsi Tutorial</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Source code editor, atau singkatnya code editor, adalah salah satu jenis dari text editor yang tersedia. Code editor ini merupakan text editor yang dikhususkan untuk menuliskan kode-kode dari perangkat lunak yang sedang dikembangkan
               </p>
             </div>
           </div>
