--- a/python4.html
+++ b/python4.html
@@ -111,9 +111,10 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Deskripsi Video</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Komputer tidak bisa memahami bahasa manusia yang sangat kompleks dan ambigu, sehingga jika kita ingin berkomunikasi dengan komputer, memberi instruksi kepada komputer, 
+                maka haruslah dengan bahasa yang dimengerti oleh komputer. Namun sayangnya, bahasa yang dimengerti oleh komputer hanyalah bahasa tingkat rendah yaitu bahasa mesin yang hanya terdiri dari binary code.
               </p>
             </div>
           </div>
