--- a/javascript5.html
+++ b/javascript5.html
@@ -111,9 +111,10 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Deskripsi Video</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Dengan belajar JavaScript, kamu juga berpotensi untuk mempelajari bahasa pemrograman lain dalam satu waktu. 
+                Hal ini disebabkan karena JavaScript memungkinkan penggunanya untuk berkolaborasi dengan bahasa pemrograman lainnya.
               </p>
             </div>
           </div>
