--- a/javascript1.html
+++ b/javascript1.html
@@ -107,7 +107,7 @@
                 <li><strong>Category</strong>: JavaScript</li>
                 <li><strong>Title</strong>: Dasar Pemrograman dengan JavaScript</li>
                 <li><strong>Provided by</strong>: Web Programming UNPAS</li>
-                <li><strong>Modul URL</strong>: <a href="https://bit.ly/3A1yrNo">Click for PDF File</a></li>
+                <li><strong>Modul URL</strong>: <a href="https://bit.ly/3KkngEg">Click for PDF File</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
