--- a/css5.html
+++ b/css5.html
@@ -107,7 +107,7 @@
                 <li><strong>Category</strong>: CSS3</li>
                 <li><strong>Title</strong>: Text Styling</li>
                 <li><strong>Provided by</strong>: Web Programming UNPAS</li>
-                <li><strong>Modul URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Modul URL</strong>: <a href="https://bit.ly/3I9QaF6">Klik untuk melihat file PDF</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
