--- a/html5.html
+++ b/html5.html
@@ -107,7 +107,7 @@
                 <li><strong>Category</strong>: HTML5</li>
                 <li><strong>Title</strong>: Hello World!</li>
                 <li><strong>Provided by</strong>: Web Programming UNPAS</li>
-                <li><strong>Modul URL</strong>: <a href="https://bit.ly/326mUQs">Click for PDF file</a></li>
+                <li><strong>Modul URL</strong>: <a href="https://bit.ly/3A6MuRX">Klik untuk melihat file PDF</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
