--- a/python3.html
+++ b/python3.html
@@ -106,7 +106,7 @@
                 <li><strong>Category</strong>: Python</li>
                 <li><strong>Title</strong>: Instalasi Python dan VSCode di MacOS</li>
                 <li><strong>Provided by</strong>: Kelas Terbuka</li>
-                <li><strong>Modul URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Modul URL</strong>: <a href="https://bit.ly/3Khff37">Klik untuk melihat file PDF</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
