--- a/python5.html
+++ b/python5.html
@@ -107,7 +107,7 @@
                 <li><strong>Category</strong>: Python</li>
                 <li><strong>Title</strong>: Mengenal Variable</li>
                 <li><strong>Provided by</strong>: Kelas Terbuka</li>
-                <li><strong>Modul URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Modul URL</strong>: <a href="https://bit.ly/3IimGF5">Klik untuk melihat file PDF</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
