a slight update on tutorial of how to use the website

--- a/index.html
+++ b/index.html
@@ -505,7 +505,18 @@
         <ul class="faq-list" data-aos="fade-up" data-aos-delay="100">
 
           <li>
-            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Tutorial apa saja yang disediakan didalam website ini ? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Bagaimana cara menggunakan website ini? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq1" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Berikut kami cantumkan file untuk cara - cara menggunakan website ini. <br> 
+                <a href="https://drive.google.com/file/d/1SqKbUHd5p96bCqJ1wQO2EyntJikOzhMa/view?usp=sharing">klik untuk melihat cara dalam bentuk pdf</a> <br>
+                <a href="">klik untuk melihat cara dalam bentuk video</a>
+              </p>
+            </div>
+          </li>
+          
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Tutorial apa saja yang disediakan didalam website ini? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Kami menyediakan 4 tutorial bahasa pemrograman, yaitu HTML,CSS,Phyton dan Javascript
@@ -523,7 +534,7 @@
           </li>
 
           <li>
-            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Tutorial teksnya apakah bisa didownload ? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Tutorial teksnya apakah bisa didownload? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Bisa, caranya sangat mudah. Tinggal menekan pdf yang ada pada bagian tutorial, maka akan diarahkan untuk mendownload
